<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tVTitle"
        style="@style/ScreenHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Set up FlowCrypt" />

    <TextView
        android:id="@+id/tVChoosingSecurePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/see_choosing_secure_pass_phrases"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="@+id/iBShowPasswordHint"
        app:layout_constraintEnd_toStartOf="@+id/iBShowPasswordHint"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/iBShowPasswordHint" />

    <ImageButton
        android:id="@+id/iBShowPasswordHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="32dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/see_choosing_secure_pass_phrases"
        android:padding="@dimen/default_margin_content_small"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tVChoosingSecurePass"
        app:layout_constraintTop_toBottomOf="@+id/tVTitle"
        app:srcCompat="@drawable/ic_help" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tILPassphrase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_password_layout"
        android:hint="@string/enter_new_pass_phrase"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/iBShowPasswordHint"
        app:passwordToggleContentDescription="description"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTPassphrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <ProgressBar
            android:id="@+id/pBarPassphraseQuality"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_margin_content_small"
            android:progress="0" />

        <TextView
            android:id="@+id/tVPassphraseQuality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_small"
            android:gravity="center"
            tools:text="WEAK (average time to crack: 13 seconds)" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btSetPassphrase"
        style="@style/AppWidget.Button.Big.SilverWithWhiteText"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/default_margin_content_big"
        android:text="@string/set_pass_phrase"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tILPassphrase" />

    <TextView
        android:id="@+id/tVLostPassphraseWarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_content_big"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/default_text_size_medium"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/btSetPassphrase"
        tools:text="@string/loss_of_this_pass_phrase_cannot_be_recovered" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/default_margin_content_big" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/default_margin_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/default_margin_content_big" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/default_margin_content" />

</androidx.constraintlayout.widget.ConstraintLayout>
