...
    <string name="set_pass_phrase">Set pass phrase</string>
    <string name="confirm_pass_phrase">Confirm pass phrase</string>
    <string name="use_another_pass_phrase">Use another pass phrase</string>
    <string name="repeat_pass_phrase">Repeat pass phrase</string>
    <string name="loss_of_this_pass_phrase_cannot_be_recovered">Lost pass phrase cannot be recovered.</string>
    <string name="see_choosing_secure_pass_phrases">See choosing secure pass phrases</string>
    <string name="select_stronger_pass_phrase">Please select a stronger pass phrase. Combinations of 4 to 5 uncommon
        words are the best.</string>
    <string name="password_quality_subtext">(time to crack:</string>
    <string name="password_quality_perfect">perfect</string>
    <string name="password_quality_great">great</string>
    <string name="password_quality_good">good</string>
    <string name="password_quality_reasonable">reasonable</string>
...
    <string name="receive_notifications_for">Receive notifications for:</string>
    <string name="no_key_available_for_your_email_account">No key available for your email account. Please write %1$s for help.</string>
    <string name="no_key_available_for_your_emails">No keys available for your email addresses %1$s and %2$s. Please write %3$s for help.</string>
    <string name="pass_phrase_changed">Pass phrase successfully changed.</string>
    <string name="please_wait_while_pass_phrase_will_be_changed">Changing a pass phrase, please wait</string>
    <string name="backup_options">Backup options</string>
    <string name="change_pass_phrase">Change pass phrase</string>
    <string name="account_has_no_associated_keys">This account has no associated keys. Write us at %1$s</string>
    <string name="pass_phrase_is_too_weak">Your pass phrase is too weak</string>
    <string name="fix">fix</string>
    <string name="different_pass_phrases">Your private keys have different pass phrases</string>
    <plurals name="file_contains_some_amount_of_keys">
        <item quantity="one">[%1$s]</item>
...
