...
                    android:text="@string/to"
                    android:textColor="@color/nobel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewChipsTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toStartOf="@+id/imageButtonAdditionalRecipientsVisibility"
                    app:layout_constraintStart_toStartOf="parent"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewAutocompleteBcc" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSetWebPortalPassword"
                style="@style/AppWidget.Button.Big.Orange"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height_small"
                android:layout_gravity="center"
                android:autoSizeMaxTextSize="@dimen/default_text_size_medium"
                android:autoSizeTextType="uniform"
                android:text="@string/tap_to_protect_with_web_portal_password"
                android:textAllCaps="false"
                android:visibility="gone"
                app:icon="@drawable/ic_password_not_protected_white_24" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppWidget.TextInputLayout.GreyBottomLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_subject">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmailSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailSubject|textCapSentences|textAutoCorrect"
                    android:maxLines="1"
                    android:paddingTop="@dimen/default_margin_content" />
...
